# OpenGL-Project

./: CMakeLists.txt  vcpkg.json
assignment/: assignment_main.cpp  box.frag  building.cpp  depth.frag  floor.cpp  model.cpp  skybox.cpp
assignment/assets/: uploads_files_5572778_PLANE (1).mtl  uploads_files_5572778_PLANE.mtl
assignment/shaders/: building.frag  building.vert  floor.frag  floor.vert  mesh.frag  mesh.vert  skybox.frag  skybox.vert  standardObj.frag  standardObj.vert
